Fixed: App.js: I just added some comments, one where the wrapper ends, the other where the footer component should be. In progress: created the Component Footer.js with information about me. Fixed: FortuneCookie.js: I took away all about the functions itself so that I just have what should be returned left, for instance what the wise dragon will say and the structure, and taking in the RandomCookie component. Fixed: fortunes.json: I tested first with a json file to just make it fetch a fortune message from the fortunes.json file randomly. In here it is just random lorem text.  Fixed: RandomCookie.js: First I imported the fortunes.json file at the top, made a network call so it will just take out some random lorem text with the help of a function that I called fetchFortune with a parameter fortuneId, return a new promise , the const is response equal the json file name fortunes and the fortuneId again. Then I reused the generate which randomly display a random number. Ceil means that it will me max 25, floor means that it will be the lowest the number 1, then it returns randomly a number. Then I did another arrow function so on click on the fortune generateFortune it will display a random number from the getRandomNumber function. I made a const variable named id which will be equal to the getRandomNumber function. So, when fetchFortune with the id it will use the const setFortune inside the RandomFortune arrow function and fetch out the fortune from the json file.  Then I just returned it in the div that have the className fortune. Fixed: _mobile.scss: I started with just taking out the className fortune and gave it a min height to be able to see the message which is displayed from the json file. Changed the dragon links wrapper to be a lot more height than it was before. Fixed: _tablet.scss: the dragon list will be little different than I have on my mockup, just because I think it looks better for the submenus buttons being wrapped into two rows instead of just havi

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -99,7 +99,7 @@
 
 .dragon--links--wrapper{
     width: 375px;
-    height: 80px;
+    height: 1900px;
     left: 0;
     
 }
@@ -386,5 +386,11 @@ nav{
   padding: 10px;
   text-align: center;
 }
+
+.fortune{
+    min-height: 50px;
+}
+
+
 
 
